--- a/public/_assets/css/main.css
+++ b/public/_assets/css/main.css
@@ -268,7 +268,7 @@ abbr {
     padding: var(--spacing-200) var(--spacing-200) 0 var(--spacing-200);
     grid-template-areas: "header     header" "sidebar    main" "sidebar    marquee" "footer     footer";
     grid-template-columns: min-content 1fr;
-    grid-template-rows: auto 1fr min-content var(--spacing-200);
+    grid-template-rows: min-content 1fr min-content var(--spacing-200);
     height: 100%;
     max-width: var(--measure-max);
   }
@@ -373,10 +373,12 @@ abbr {
   .sidebar {
     display: grid;
     grid-template-areas: "navi" "theme-toggle" "status" "directories";
-    grid-template-rows: min-content var(--spacing-200) 1fr min-content;
+    grid-template-rows: auto var(--spacing-200) 2fr auto;
+    grid-template-columns: min-content;
     row-gap: var(--spacing-100);
   }
   .sidebar__navi {
+    overflow-y: auto;
     border: 1px solid var(--color-base);
     padding: var(--spacing-100);
   }
@@ -387,6 +389,7 @@ abbr {
   .sidebar__status {
     border: 1px solid var(--color-base);
     padding: var(--spacing-100);
+    overflow-y: auto;
     min-height: 0;
   }
   .sidebar__directories {
@@ -715,10 +718,6 @@ abbr {
   font-size: var(--font-size-base);
   line-height: var(--line-height-base);
   letter-spacing: var(--letter-spacing-120);
-}
-.status__body {
-  min-height: 0;
-  overflow-y: auto;
 }
 .status__body-copy {
   color: var(--color-base);
